--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "@vitesse/template",
+  "name": "hot-potato",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite --port 3333 --open",
+    "dev": "vite --port 8080 --open",
     "build": "cross-env NODE_ENV=production vite build"
   },
   "dependencies": {
     "@iconify/iconify": "^2.0.0-beta.6",
     "@vueuse/core": "^4.0.0-beta.9",
+    "firebase": "^7.20.0",
+    "firebaseui": "^4.6.1",
     "vue": "^3.0.0-rc.8",
     "vue-i18n": "9.0.0-alpha.13",
     "vue-router": "^4.0.0-beta.7"
